Fix missing background when menu screen needs scrolling

--- a/game/src/menu/menu.scss
+++ b/game/src/menu/menu.scss
@@ -9,6 +9,8 @@
     flex-direction: column;
     flex-wrap: nowrap;
 
+    overflow: auto;
+
     /* -------------------- Game Title -------------------- */
     .GameTitle {
         flex: 0;
